CSS: fix slider dots z-index.

--- a/assets/css/partials/_header.scss
+++ b/assets/css/partials/_header.scss
@@ -637,6 +637,7 @@
 	}
 
 	.slick-dots {
+		z-index: 50;
 		list-style: none;
 		position: absolute;
 		bottom: 1rem;
