--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1951,6 +1951,7 @@ h3 + .search-form {
   height: 100%;
 }
 .has-front-page-slider .slick-dots {
+  z-index: 50;
   list-style: none;
   position: absolute;
   bottom: 1rem;
